tests/vertical-slice/accept/print_bool.hew
fn main() -> i64 {
    print(true);
    println("");
    0
}
