tests/vertical-slice/reject/move_into_enum_string.hew
fn main() -> string {
    let s = "hello";
    let _value = Some(s);
    s
}
